tests/data/placebo/test_aws_lambda_sg/ec2.DescribeSecurityGroups_1.json
{
  "status_code": 200,
  "data": {
    "SecurityGroups": [
      {
        "IpPermissionsEgress": [
          {
            "IpProtocol": "-1",
            "IpRanges": [
              {
                "CidrIp": "0.0.0.0/0"
              }
            ],
            "UserIdGroupPairs": [],
            "PrefixListIds": []
          }
        ],
        "Description": "default VPC security group",
        "IpPermissions": [
          {
            "PrefixListIds": [],
            "FromPort": 22,
            "IpRanges": [
              {
                "CidrIp": "71.163.79.221/32"
              }
            ],
            "ToPort": 22,
            "IpProtocol": "tcp",
            "UserIdGroupPairs": []
          }
        ],
        "GroupName": "default",
        "VpcId": "vpc-4a9ff72e",
        "OwnerId": "644160558196",
        "GroupId": "sg-f9cc4d9f"
      }
    ],
    "ResponseMetadata": {}
  }
}
